# RealtimeAPI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_CN.md  SECURITY.md  docker-deploy.sh  dockerbuild.ps1  doctor.sh  start.sh
docs/: README.md  (+3 more)
server/: .dockerignore  .editorconfig  .env.example  Cargo.toml  Dockerfile.cpu  Dockerfile.gpu  docker-compose.quickstart.yml  docker-compose.yml  install.sh  realtime  requirements.txt  run.ps1.example  rustfmt.toml
server/.cargo/: config.toml
server/benches/: paced_sender_bench.rs  protocol_bench.rs  text_splitter_bench.rs  vad_bench.rs
server/config/: config.yaml  systemprompt.xml  voice_library_default.json
server/docs/: architecture.md  benchmarks.md
server/playground/: index.html  manifest.webmanifest  sw.js  workbox-0ce60e7d.js
server/playground/assets/: index-B5piX0av.css  index-Cb4V8sOy.js  jotai-80Am-avx.js  react-vendor-9-_4V4uR.js
server/scripts/: cmd_doctor.sh  cmd_onboard.sh  cmd_start.sh  icon_ascii.txt  load_test.py  realtime_client.py  setup_utils.sh  voice_clone.py
server/src/: lang.rs  lib.rs  main.rs  monitoring.rs  telemetry.rs  text_splitter.rs
server/src/agents/: audio_recorder_agent.rs  camera_photo_agent.rs  camera_video_agent.rs  device_control_agent.rs  fallback_agent.rs  goodbye_agent.rs  mod.rs  music_control_agent.rs  navigation_agent.rs  photo_agent.rs  rejection_agent.rs  reminder_agent.rs  role_extractor.rs  runtime.rs  search_agent.rs  stream_utils.rs  system_prompt_registry.rs  tool_utils.rs  translate_agent.rs  turn_tracker.rs  volume_agent.rs  volume_down_agent.rs  volume_up_agent.rs
server/src/agents/media_agent/: media_agent.rs  mod.rs  types.rs
server/src/agents/media_agent/providers/: mod.rs  music_provider.rs
server/src/agents/prompts/: assistant.rs  device_control.rs  goodbye.rs  mod.rs  music.rs  navigation.rs  photo.rs  rejection.rs  reminder.rs  search.rs  visual_qa.rs  volume.rs
server/src/asr/: backend.rs  mod.rs  punctuation.rs  stabilizer.rs  types.rs  whisperlive.rs
server/src/asr/parakeet/: mod.rs
server/src/audio/: agc.rs  enhancement.rs  input_processor.rs  mod.rs  opus_proc.rs  saver.rs  tts_frame.rs
server/src/audio/denoiser/: audio_processor.rs  gtcrn_frequency_denoiser.rs  gtcrn_simple.onnx  mod.rs
server/src/function_callback/: math_calculator.rs  mod.rs  searxng_client.rs
server/src/function_callback/tools/: math.rs  mod.rs  search.rs  simul_interpret.rs  tavily_client.rs  world_clock.rs
server/src/geodata/: cities500.rs  mod.rs
server/src/ip_geolocation/: location_cleaner.rs  lookup.rs  mod.rs  types.rs
server/src/llm/: llm.rs  llm_task_v2.rs  mcp_prompt_registry.rs
server/src/mcp/: async_tools_manager.rs  client.rs  error.rs  http_client.rs  manager.rs  mod.rs  protocol.rs  tool_cache.rs  tools_endpoint_client.rs
server/src/rpc/: actix_rpc_system.rs  actix_websocket.rs  config.rs  connection_metadata.rs  error.rs  event_handler.rs  message_adapter.rs  mod.rs  pipeline_factory.rs  protocol.rs  realtime_event.rs  remote_config.rs  request_normalizer.rs  session_manager.rs  session_router.rs  tts_pool.rs
server/src/rpc/pipeline/: mod.rs  task_scope.rs
server/src/rpc/pipeline/asr_llm_tts/: asr_task.rs  asr_task_base.rs  asr_task_core.rs  asr_task_ptt.rs  asr_task_vad.rs  asr_task_vad_deferred.rs  audio_blocking_service.rs  event_emitter.rs  guided_choice_selector.rs  intent.rs  interrupt_service.rs  lockfree_response_id.rs  mod.rs  routing.rs  sentence_queue.rs  session_audio_sender.rs  session_data_integration.rs  simple_interrupt_manager.rs  timing_manager.rs  tool_call_manager.rs  tts_task.rs  types.rs
server/src/storage/: config.rs  global_manager.rs  in_memory.rs  mod.rs  pg_store.rs  session_data.rs
server/src/tts/: mod.rs  volc_engine.rs
server/src/tts/azure/: client.rs  config.rs  mod.rs  types.rs  voice_mapping.rs
server/src/tts/baidu/: client.rs  config.rs  http_client.rs  mod.rs  types.rs
server/src/tts/edge/: client.rs  config.rs  mod.rs  mp3_decoder.rs  types.rs  voice_mapping.rs
server/src/tts/minimax/: config.rs  http_client.rs  lang.rs  mod.rs  types.rs  voice_library.rs
server/src/vad/: config.rs  engine.rs  iterator.rs  mod.rs  model.rs  silero_vad_16k_op15.onnx
server/src/vad/semantic_vad/: features.rs  mod.rs
server/web_client/: index.html  translation.html
(+90 files in other folders)
